# Vox

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
cmake/: vox-config.cmake.in
include/vox/: Vox.h
src/: DX12Device.cpp  DX12Device.h  DeviceFactory.cpp  MetalDevice.h  MetalDevice.mm  VulkanDevice.cpp  VulkanDevice.h
test/: VoxTest.cpp  test_proximity.spv
